tests/baselines/reference/manyCompilerErrorsInTheTwoFiles.errors.txt
● [96mtests/cases/compiler/a.ts[0m:[93m1[0m:[93m11[0m TS1109
| const a =!@#!@$
  [91m          ▔[0m
Expression expected.
● [96mtests/cases/compiler/a.ts[0m:[93m1[0m:[93m12[0m TS18026
| const a =!@#!@$
  [91m           [0m
'#!' can only be used at the start of a file.
● [96mtests/cases/compiler/a.ts[0m:[93m1[0m:[93m14[0m TS1109
| const a =!@#!@$
  [91m             ▔[0m
Expression expected.
● [96mtests/cases/compiler/a.ts[0m:[93m2[0m:[93m12[0m TS1109
| const b = !@#!@#!@#!
  [91m           ▔[0m
Expression expected.
● [96mtests/cases/compiler/a.ts[0m:[93m2[0m:[93m13[0m TS18026
| const b = !@#!@#!@#!
  [91m            [0m
'#!' can only be used at the start of a file.
● [96mtests/cases/compiler/a.ts[0m:[93m2[0m:[93m15[0m TS1109
| const b = !@#!@#!@#!
  [91m              ▔[0m
Expression expected.
● [96mtests/cases/compiler/a.ts[0m:[93m2[0m:[93m16[0m TS18026
| const b = !@#!@#!@#!
  [91m               [0m
'#!' can only be used at the start of a file.
● [96mtests/cases/compiler/a.ts[0m:[93m2[0m:[93m18[0m TS1109
| const b = !@#!@#!@#!
  [91m                 ▔[0m
Expression expected.
● [96mtests/cases/compiler/a.ts[0m:[93m2[0m:[93m19[0m TS18026
| const b = !@#!@#!@#!
  [91m                  [0m
'#!' can only be used at the start of a file.
● [96mtests/cases/compiler/a.ts[0m:[93m3[0m:[93m1[0m TS2304
| OK!
  [91m▔▔[0m
Cannot find name 'OK'.
● [96mtests/cases/compiler/a.ts[0m:[93m4[0m:[93m1[0m TS1434
| HERE's A shouty thing
  [91m▔▔▔▔[0m
Unexpected keyword or identifier.
● [96mtests/cases/compiler/a.ts[0m:[93m4[0m:[93m1[0m TS2304
| HERE's A shouty thing
  [91m▔▔▔▔[0m
Cannot find name 'HERE'.
● [96mtests/cases/compiler/a.ts[0m:[93m4[0m:[93m22[0m TS1002
| HERE's A shouty thing
  [91m                     [0m
Unterminated string literal.
● [96mtests/cases/compiler/a.ts[0m:[93m5[0m:[93m1[0m TS1434
| GOTTA GO FAST
  [91m▔▔▔▔▔[0m
Unexpected keyword or identifier.
● [96mtests/cases/compiler/a.ts[0m:[93m5[0m:[93m1[0m TS2304
| GOTTA GO FAST
  [91m▔▔▔▔▔[0m
Cannot find name 'GOTTA'.
● [96mtests/cases/compiler/a.ts[0m:[93m5[0m:[93m7[0m TS1434
| GOTTA GO FAST
  [91m      ▔▔[0m
Unexpected keyword or identifier.
● [96mtests/cases/compiler/a.ts[0m:[93m5[0m:[93m7[0m TS2304
| GOTTA GO FAST
  [91m      ▔▔[0m
Cannot find name 'GO'.
● [96mtests/cases/compiler/a.ts[0m:[93m5[0m:[93m10[0m TS2304
| GOTTA GO FAST
  [91m         ▔▔▔▔[0m
Cannot find name 'FAST'.
● [96mtests/cases/compiler/b.ts[0m:[93m1[0m:[93m1[0m TS2304
| fhqwhgads
  [91m▔▔▔▔▔▔▔▔▔[0m
Cannot find name 'fhqwhgads'.
● [96mtests/cases/compiler/b.ts[0m:[93m2[0m:[93m1[0m TS2304
| to
  [91m▔▔[0m
Cannot find name 'to'.
● [96mtests/cases/compiler/b.ts[0m:[93m3[0m:[93m1[0m TS2304
| limit
  [91m▔▔▔▔▔[0m
Cannot find name 'limit'.


==== tests/cases/compiler/a.ts (18 errors) ====
    const a =!@#!@$
              ~
!!! error TS1109: Expression expected.
               
!!! error TS18026: '#!' can only be used at the start of a file.
                 ~
!!! error TS1109: Expression expected.
    const b = !@#!@#!@#!
               ~
!!! error TS1109: Expression expected.
                
!!! error TS18026: '#!' can only be used at the start of a file.
                  ~
!!! error TS1109: Expression expected.
                   
!!! error TS18026: '#!' can only be used at the start of a file.
                     ~
!!! error TS1109: Expression expected.
                      
!!! error TS18026: '#!' can only be used at the start of a file.
    OK!
    ~~
!!! error TS2304: Cannot find name 'OK'.
    HERE's A shouty thing
    ~~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~~
!!! error TS2304: Cannot find name 'HERE'.
                         
!!! error TS1002: Unterminated string literal.
    GOTTA GO FAST
    ~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~~~
!!! error TS2304: Cannot find name 'GOTTA'.
          ~~
!!! error TS1434: Unexpected keyword or identifier.
          ~~
!!! error TS2304: Cannot find name 'GO'.
             ~~~~
!!! error TS2304: Cannot find name 'FAST'.
    
==== tests/cases/compiler/b.ts (3 errors) ====
    fhqwhgads
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'fhqwhgads'.
    to
    ~~
!!! error TS2304: Cannot find name 'to'.
    limit
    ~~~~~
!!! error TS2304: Cannot find name 'limit'.
Found 21 errors in 2 files.

Errors  Files
    18  tests/cases/compiler/a.ts:1
     3  tests/cases/compiler/b.ts:1
